create Row component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "lib": [
-      "ESNext",
-      "DOM.Iterable",
-      "DOM"
-    ],
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "baseUrl": "src",
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"]
 }
