--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-youtube": "^7.13.1",
     "typescript": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
