--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-youtube": "^7.13.1",
     "typescript": "^4.1.5",
